--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>CokeDrops</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
@@ -11,20 +12,21 @@
     <div class="container">
       <div class="header clearfix">
         
-        <div class="logo-drop pull-left"></div>
+        <div class="drop drop-lg red-coke pull-left"></div>
         <h3 class="text-muted logo-text">CokeDrops</h3>
         <% if Tweet.all.any? %>
-        <div class="pull-right">
-          <%= link_to "Reset DB", reset_tweets_path, method: :delete,
-data: { confirm: "Sure you want to delete all messages?" },
-title: "Reset Database" %></div>
-<% end %>
+          <div class="pull-right">
+            <%= link_to "Reset DB", reset_tweets_path, method: :delete,
+                data: { confirm: "Sure you want to delete all messages?" },
+            title: "Reset Database" %>
+          </div>
+        <% end %>
       </div>
 
       
-     
+    
 
-
+    
         
         
       
@@ -44,7 +46,11 @@ title: "Reset Database" %></div>
 
     </div> <!-- /container -->
 
+    <!-- classie.js by @desandro: https://github.com/desandro/classie -->
+   
 
+
+    <script src="assets/modalEffects.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
