--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <div class="header clearfix">
         
         <div class="drop drop-lg red-coke pull-left"></div>
-        <h3 class="text-muted logo-text">CokeDrops</h3>
+        <h3 class="text-muted drop-lg-text">CokeDrops</h3>
         <% if Tweet.all.any? %>
           <div class="pull-right">
             <%= link_to "Reset DB", reset_tweets_path, method: :delete,
@@ -22,18 +22,12 @@
           </div>
         <% end %>
       </div>
-
-      
-    
-
-    
-        
-        
-      
+         
 
       <div class="row marketing">
         <% flash.each do |key, value| %>
           <div class="alert alert-<%= key %>"><%= value %></div>
+          <br/>
         <% end %>
         <div class="col-lg-12">
           <%= yield %>
@@ -41,12 +35,10 @@
       </div>
 
       <footer class="footer">
-        <p>&copy; Company 2014</p>
+        <p>Paris Kemanes 2015 - Adaptive Lab Test</p>
       </footer>
 
     </div> <!-- /container -->
-
-    <!-- classie.js by @desandro: https://github.com/desandro/classie -->
    
 
 
