--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,141 +1,120 @@
+<div class="row">
+  <div class="col-lg-6">
+    <p><%= link_to "Fetch more messages", tweets_path, method: :post, class: "btn btn-lg btn-success btn-fetch-messages" %></p>
+    <p class="">Total Tweets: <%= Tweet.all.count %></p>
+  </div>
 
-      <div class="box pull-right">
-        <div class="pull-left">
-          <div id="positive-filter" class="drop drop-md positive" onclick="document.getElementById('positive-drop').click();">
-            <div class="rotate ">     
-              <button id="positive-drop"class=" cbutton cbutton--complex cbutton--box cbutton--box-color-4 cbutton--effect-dejan ">
+  <div class="col-lg-6">
+    <div class="box pull-right">
+      <div class="pull-left">
+        <div id="positive-filter" class="drop drop-md positive" onclick="document.getElementById('positive-drop').click();">
+          <div class="rotate ">     
+            <a id="positive-drop"class=" fbutton fbutton--complex fbutton--box fbutton--box-color-4 fbutton--effect-splash ">
 
-                <span class="cbutton__text">Colorpicker</span>
-                <span class="cbutton__helper cbutton__helper--first"><img src="assets/splash_1.svg#color-4" /></span>
-                <span class="cbutton__helper cbutton__helper--second"><img src="assets/splash_2.svg#color-4" /></span>
-              </button>
-              <span class="drop-md-text"><%= sprintf '%02d', Tweet.where("sentiment > 0").count %></span>
-            </div>
+              <span class="fbutton__text">Colorpicker</span>
+              <span class="fbutton__helper fbutton__helper--first"><img src="assets/splash_1.svg#color-4" /></span>
+              <span class="fbutton__helper fbutton__helper--second"><img src="assets/splash_2.svg#color-4" /></span>
+            </a>
+            <span id="positive-count" class="drop-md-text"><%= sprintf '%02d', Tweet.where("sentiment > 0").count %></span>
           </div>
-          <div class="text-center drop-title">POSITIVE</div>
         </div>
-
-        <div class="pull-left">
-          <div id="neutral-filter" class="drop drop-md neutral" onclick="document.getElementById('neutral-drop').click();">
-            <div class="rotate ">     
-              <button id="neutral-drop"class=" cbutton cbutton--complex cbutton--box cbutton--box-color-5 cbutton--effect-dejan ">
-
-                <span class="cbutton__text">Colorpicker</span>
-                <span class="cbutton__helper cbutton__helper--first"><img src="assets/splash_1.svg#color-5" /></span>
-                <span class="cbutton__helper cbutton__helper--second"><img src="assets/splash_2.svg#color-5" /></span>
-              </button>
-              <span class="drop-md-text"><%= sprintf '%02d', Tweet.where("sentiment = 0").count %></span>
-            </div>
-          </div>
-          <div class="text-center drop-title">NEUTRAL</div>
-        </div>
-
-        <div class="pull-left">
-        
-          <div id="negative-filter" class="drop drop-md negative" onclick="document.getElementById('negative-drop').click();">
-            <div class="rotate ">     
-              <button id="negative-drop"class=" cbutton cbutton--complex cbutton--box cbutton--box-color-6 cbutton--effect-dejan ">
-
-                <span class="cbutton__text">Colorpicker</span>
-                <span class="cbutton__helper cbutton__helper--first"><img src="assets/splash_1.svg#color-6" /></span>
-                <span class="cbutton__helper cbutton__helper--second"><img src="assets/splash_2.svg#color-6" /></span>
-              </button>
-              <span class="drop-md-text"><%= sprintf '%02d', Tweet.where("sentiment < 0").count %></span>
-            </div>
-          </div>
-          <div class="text-center drop-title">NEGATIVE</div>
-        </div>
-        
-        
-        
-      </div>
-      <p><%= link_to "Fetch more messages", tweets_path, method: :post, class: "btn btn-lg btn-success btn-fetch-messages" %></p>
-      
-
-      <br/>
-  
-     
-      <div id="show-censored" data-role="fieldcontain">
-        <label for="censored">Highlight <span data-toggle="tooltip" data-placement="top" title="<%= Tweet::WORDLIST.each {|word| puts word}%>">censored tweets</span></label>       
-        <input id="censored" name="censored" type="checkbox" checked onclick="highlightCensored()" />
-        <p class="pull-right">Total Tweets: <%= Tweet.all.count %></p>
+        <div class="text-center drop-title">POSITIVE</div>
       </div>
 
-      <div id="tweets_list" class="list-group">
-        <%= render partial: "tweet_list", locals: { tweets: @tweets} %>
+      <div class="pull-left">
+        <div id="neutral-filter" class="drop drop-md neutral" onclick="document.getElementById('neutral-drop').click();">
+          <div class="rotate ">     
+            <button id="neutral-drop"class=" fbutton fbutton--complex fbutton--box fbutton--box-color-5 fbutton--effect-splash ">
+
+              <span class="fbutton__text">Colorpicker</span>
+              <span class="fbutton__helper fbutton__helper--first"><img src="assets/splash_1.svg#color-5" /></span>
+              <span class="fbutton__helper fbutton__helper--second"><img src="assets/splash_2.svg#color-5" /></span>
+            </button>
+            <span class="drop-md-text"><%= sprintf '%02d', Tweet.where("sentiment = 0").count %></span>
+          </div>
+        </div>
+        <div class="text-center drop-title">NEUTRAL</div>
       </div>
+
+      <div class="pull-left">
+      
+        <div id="negative-filter" class="drop drop-md negative" onclick="document.getElementById('negative-drop').click();">
+          <div class="rotate ">     
+            <button id="negative-drop"class=" fbutton fbutton--complex fbutton--box fbutton--box-color-6 fbutton--effect-splash ">
+
+              <span class="fbutton__text">Colorpicker</span>
+              <span class="fbutton__helper fbutton__helper--first"><img src="assets/splash_1.svg#color-6" /></span>
+              <span class="fbutton__helper fbutton__helper--second"><img src="assets/splash_2.svg#color-6" /></span>
+            </button>
+            <span class="drop-md-text"><%= sprintf '%02d', Tweet.where("sentiment < 0").count %></span>
+          </div>
+        </div>
+        <div class="text-center drop-title">NEGATIVE</div>
+      </div>
+    </div>
+
+  </div>
+</div>  
+      
+        
+<div class="row">
+  <div class="col-lg-12">
+    <div id="show-censored" class="pull-right" data-role="fieldcontain">
+      <label for="censored">Highlight <span data-toggle="tooltip" data-placement="top" title="<%= Tweet::WORDLIST.each {|word| puts word}%>">censored tweets</span></label>       
+      <input id="censored" name="censored" type="checkbox" checked />
+      
+    </div>
+  </div>
+</div>     
       
 
+<div class="row">
+  <div class="col-lg-12">
+    <div id="tweets_list" class="list-group">
+      <%= render partial: "tweet_list", locals: { tweets: @tweets} %>
+    </div>
+  </div>
+</div>     
       
-        <script>
-      (function() {
+      
+<script>
+  (function() {
 
-        // http://stackoverflow.com/a/11381730/989439
-        function mobilecheck() {
-          var check = false;
-          (function(a){if(/(android|ipad|playbook|silk|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(a)||/1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0,4)))check = true})(navigator.userAgent||navigator.vendor||window.opera);
-          return check;
+    // http://stackoverflow.com/a/11381730/989439
+    function mobilecheck() {
+      var check = false;
+      (function(a){if(/(android|ipad|playbook|silk|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(a)||/1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0,4)))check = true})(navigator.userAgent||navigator.vendor||window.opera);
+      return check;
+    }
+
+    var support = { animations : Modernizr.cssanimations },
+      animEndEventNames = { 'WebkitAnimation' : 'webkitAnimationEnd', 'OAnimation' : 'oAnimationEnd', 'msAnimation' : 'MSAnimationEnd', 'animation' : 'animationend' },
+      animEndEventName = animEndEventNames[ Modernizr.prefixed( 'animation' ) ],
+      onEndAnimation = function( el, callback ) {
+        var onEndCallbackFn = function( ev ) {
+          if( support.animations ) {
+            if( ev.target != this ) return;
+            this.removeEventListener( animEndEventName, onEndCallbackFn );
+          }
+          if( callback && typeof callback === 'function' ) { callback.call(); }
+        };
+        if( support.animations ) {
+          el.addEventListener( animEndEventName, onEndCallbackFn );
         }
+        else {
+          onEndCallbackFn();
+        }
+      },
+      eventtype = mobilecheck() ? 'touchstart' : 'click';
 
-        var support = { animations : Modernizr.cssanimations },
-          animEndEventNames = { 'WebkitAnimation' : 'webkitAnimationEnd', 'OAnimation' : 'oAnimationEnd', 'msAnimation' : 'MSAnimationEnd', 'animation' : 'animationend' },
-          animEndEventName = animEndEventNames[ Modernizr.prefixed( 'animation' ) ],
-          onEndAnimation = function( el, callback ) {
-            var onEndCallbackFn = function( ev ) {
-              if( support.animations ) {
-                if( ev.target != this ) return;
-                this.removeEventListener( animEndEventName, onEndCallbackFn );
-              }
-              if( callback && typeof callback === 'function' ) { callback.call(); }
-            };
-            if( support.animations ) {
-              el.addEventListener( animEndEventName, onEndCallbackFn );
-            }
-            else {
-              onEndCallbackFn();
-            }
-          },
-          eventtype = mobilecheck() ? 'touchstart' : 'click';
-
-        [].slice.call( document.querySelectorAll( '.cbutton' ) ).forEach( function( el ) {
-          el.addEventListener( eventtype, function( ev ) {
-            classie.add( el, 'cbutton--click' );
-            onEndAnimation( classie.has( el, 'cbutton--complex' ) ? el.querySelector( '.cbutton__helper' ) : el, function() {
-              classie.remove( el, 'cbutton--click' );
-            } );
-          } );
+    [].slice.call( document.querySelectorAll( '.fbutton' ) ).forEach( function( el ) {
+      el.addEventListener( eventtype, function( ev ) {
+        classie.add( el, 'fbutton--click' );
+        onEndAnimation( classie.has( el, 'fbutton--complex' ) ? el.querySelector( '.fbutton__helper' ) : el, function() {
+          classie.remove( el, 'fbutton--click' );
         } );
+      } );
+    } );
 
-      })();
-    </script>
-
-    <script type="text/javascript">
-      $(function () {
-        $('[data-toggle="tooltip"]').tooltip()
-      });
-    </script>
-
-    <script type="text/javascript">
-    
-      $( "#positive-drop" ).click(function() {
-        $( '#positive-filter' ).toggleClass( "drop-muted" );
-        $( '[data-sentiment="positive"]' ).toggle( "slow" );
-      });
-      $( "#neutral-drop" ).click(function() {
-        $( '#neutral-filter' ).toggleClass( "drop-muted" );
-        $( '[data-sentiment="neutral"]' ).toggle( "slow" );
-      });
-      $( "#negative-drop" ).click(function() {
-        $( '#negative-filter' ).toggleClass( "drop-muted" );
-        $( '[data-sentiment="negative"]' ).toggle( "slow" );
-      });
-
-      function highlightCensored() {
-        if (document.getElementById('censored').checked) {
-            $( '[data-censored="true"]' ).addClass( "highlight" );
-        } else {
-            $( '[data-censored="true"]' ).removeClass( "highlight" );
-        }
-      };
-    
-    </script>
+  })();
+</script>
