--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -5,6 +5,8 @@
   </div>
 
   <div class="col-lg-6">
+ 
+  <i class="glyphicon glyphicon-info-sign pull-right" data-toggle="tooltip" data-placement="right" title="Click the drops on the left to filter tweets"></i>
     <div class="box pull-right">
       <div class="pull-left">
         <div id="positive-filter" class="drop drop-md positive" onclick="document.getElementById('positive-drop').click();">
